@@ -1,0 +1,16 @@
+TO SUBMIT:
+
+0. Setup Panda and Rucio: lsetup panda ruco
+   Edit gridNickName in ProductionManager.py
+   Edit the path of the hadding script in createJobScript
+
+Stolen from Chris Lester ;)
+1. You need to get a grid certificate that is not located on your tmp directory, which is the usual case, but available somewhere through afs. This will allow all the batch nodes you submit to have grid access in order to dq2-get your jobs.
+
+  voms-proxy-init -voms atlas -out $HOME/.globus/gridproxy.cert -valid 24:0 
+  export X509_USER_PROXY=${HOME}/.globus/gridproxy.cert
+
+  NOTE: I have this persistify for 24 hours. I don't know how to make this last longer, so if you can redo the whole above process before it expries on any lxplus node! 
+
+2. python ProductionManager.py
+The script will get a list of GRID jobs that are "Done" and a list of DSIDs that are already uploaded to EOS. It also checks if bjobs are currently running and skips those samples. This means the script is safe to run as many times as you want.
