@@ -1,3 +1,7 @@
+2016-01-15 David Hohn <david.hohn@cern.ch>
+	* added script for downloading from grid, hadding and uploading to eos
+	* cobbled together from stuff I had lying around and a couple of tricks Chris had
+
 2016-01-14 David Hohn <david.hohn@cern.ch>
 	* small fixes for data
 
